<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_by_popular_movies">Sort by: popular movies</string>
    <string name="sort_by_top_ranked_movies">Sort by: Top ranked movies</string>
    <string name="api_key">ecd42c3b19bfabc889c4998f90405c3c</string>
    <string name="title_label">Title</string>
    <string name="detail_overview_label">Overview</string>
    <string name="detail_user_rating_label">User Rating</string>
    <string name="detail_release_date_label">Release Date</string>
    <string name="detail_error_message">Error</string>
    <string name="no_title_message">No title</string>
    <string name="no_oveview_message">No overview set</string>
    <string name="rating_not_available_message">Rating not available</string>
    <string name="date_unknown">Release date unknown</string>
    <string name="movie_image">Movie Image</string>
    <string name="overview_text">Overview Text</string>
    <string name="release_date_text">Release Date Text</string>
    <string name="title_text">Title Text</string>
    <string name="trailer">Trailer </string>
    <string name="sort_by_favorites">Favorites</string>
    <string name="removed_from_favorites">Movie removed from favorites</string>
    <string name="empty_favorites">Favorites is empty</string>
    <string name="favorite_button">Favorite button</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="image">Image</string>
</resources>
