<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csw.popularmovies.DetailActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5696a0"
            android:contentDescription="@string/title_text"
            android:paddingLeft="20dp"
            android:textAlignment="viewStart"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="545dp"
            tools:text="title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="181dp"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:baselineAligned="false"
                    android:contentDescription="@string/movie_image"
                    android:scaleType="fitStart"
                    tools:layout_editor_absoluteX="8dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/detail_release_date_label"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="185dp"
                        tools:layout_editor_absoluteY="24dp" />

                    <TextView
                        android:id="@+id/release_date_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/release_date_text"
                        android:textAlignment="viewStart"
                        tools:layout_editor_absoluteX="185dp"
                        tools:layout_editor_absoluteY="27dp"
                        tools:text="date" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/detail_user_rating_label"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="@+id/textView6"
                        tools:layout_editor_absoluteX="285dp" />

                    <TextView
                        android:id="@+id/user_rating_tv"
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_marginTop="8dp"
                        android:textAlignment="viewStart"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"
                        tools:text="origin" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:adjustViewBounds="false"
                    android:background="@mipmap/ic_favorites_empty"
                    android:cropToPadding="false" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginTop="32dp"
                android:text="@string/detail_overview_label"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="24dp" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/overview_text"
                android:textAlignment="viewStart"
                tools:layout_editor_absoluteX="299dp"
                tools:layout_editor_absoluteY="24dp"
                tools:text="description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Trailers"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="545dp"
                    tools:layout_editor_absoluteY="19dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerviewTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteY="49dp"
                    tools:listitem="@layout/trailer_recyler_cell">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Reviews"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="318dp"
                    tools:layout_editor_absoluteY="19dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerviewReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/review_recyler_cell">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>